--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -40,19 +40,22 @@
 }
 
 .experience-container {
-    margin-top: 25px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-rows: repeat(3, 150px); 
-    grid-gap: 10px;
+    grid-gap: 15px;
+    margin-top: 40px;
+    
 }
 .experience_image_container {
-    margin: auto;
-    width: 380px;
-    height: 380px
+    -webkit-box-shadow: 0px 0px 18px 0px rgba(168,168,168,1);
+    box-shadow: 0px 0px 18px 0px rgba(168,168,168,1);
+    width: 285px;
+    height: 250px
 }
 
 .experience_image {
+    margin: 0 auto;
     width: 100%;
     height: 100%;
 }
