Changes made to hex grid in experience section.

--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -44,8 +44,15 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-rows: repeat(3, 150px); 
     grid-gap: 15px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     margin-top: 40px;
     
+}
+
+.experience_hex_grid {
+   
 }
 .experience_image_container {
     -webkit-box-shadow: 0px 0px 18px 0px rgba(168,168,168,1);
@@ -73,8 +80,7 @@
 }
  .container {
 	 padding: 0;
-	 margin: 0;
-	 *zoom: 1;
+	 margin: 0; 
 }
  .container:before, .container:after {
 	 display: table;
@@ -87,18 +93,18 @@
  .hexa {
 	 float: left;
 	 margin-bottom: 1px;
-	 margin-left: 29.06976744186px;
+	 margin-left: 29px;
 	 display: block;
-	 height: 100px;
-	 width: 58.139534883721px;
+	 height: 200px;
+	 width: 120px;
 	 position: relative;
 	 background: transparent;
 }
  .hexa:before {
 	 content: "";
 	 display: block;
-	 width: 58.139534883721px;
-	 height: 100px;
+	 width: 120px;
+	 height: 150px;
 	 background: transparent;
 	 -webkit-transform: rotateZ(-60deg);
 	 -moz-transform: rotateZ(-60deg);
@@ -107,8 +113,8 @@
  .hexa:after {
 	 content: "";
 	 display: block;
-	 width: 58.139534883721px;
-	 height: 100px;
+	 width: 120px;
+	 height: 150px;
 	 background: transparent;
 	 -webkit-transform: rotateZ(60deg);
 	 -moz-transform: rotateZ(60deg);
@@ -128,8 +134,8 @@
 }
  .hexa .front {
 	 display: block;
-	 height: 100px;
-	 width: 58.139534883721px;
+	 height: 150px;
+	 width: 89.5px;
 	 position: relative;
 	 background: #dc276c;
 	 -webkit-transition: all 600ms;
@@ -145,8 +151,8 @@
  .hexa .front:before {
 	 content: "";
 	 display: block;
-	 width: 58.139534883721px;
-	 height: 100px;
+	 width: 89.5px;
+	 height: 150px;
 	 background: #dc276c;
 	 -webkit-transform: rotateZ(-60deg);
 	 -moz-transform: rotateZ(-60deg);
@@ -155,8 +161,8 @@
  .hexa .front:after {
 	 content: "";
 	 display: block;
-	 width: 58.139534883721px;
-	 height: 100px;
+	 width: 89.5px;
+	 height: 150px;
 	 background: #dc276c;
 	 -webkit-transform: rotateZ(60deg);
 	 -moz-transform: rotateZ(60deg);
@@ -166,8 +172,8 @@
 }
  .hexa .back {
 	 display: block;
-	 height: 100px;
-	 width: 58.139534883721px;
+	 height: 150px;
+	 width: 89.5px;
 	 position: relative;
 	 background: #ffb533;
 	 -webkit-transition: all 600ms;
@@ -186,8 +192,8 @@
  .hexa .back:before {
 	 content: "";
 	 display: block;
-	 width: 58.139534883721px;
-	 height: 100px;
+	 width: 89.5px;
+	 height: 150px;
 	 background: #ffb533;
 	 -webkit-transform: rotateZ(-60deg);
 	 -moz-transform: rotateZ(-60deg);
@@ -196,8 +202,8 @@
  .hexa .back:after {
 	 content: "";
 	 display: block;
-	 width: 58.139534883721px;
-	 height: 100px;
+	 width: 89.5px;
+	 height: 150px;
 	 background: #ffb533;
 	 -webkit-transform: rotateZ(60deg);
 	 -moz-transform: rotateZ(60deg);
