--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -1,6 +1,6 @@
 
 
-.portfolio_title {
+#portfolio .title {
     position: relative;
     width: 200px;
     height: 200px;
@@ -16,7 +16,7 @@
     margin: 0 auto;
 }
 
-.colored-square-2 {
+#portfolio .title .colored-square-2 {
     background: #ffeded;
     width: 150px;
     height: 150px;
@@ -24,7 +24,7 @@
     top: 50;
 }
 
-.portfolio_title_h1 {
+#portfolio .title h1 {
     position: relative;
     font-size: 2.5em;
     text-transform: uppercase;
@@ -34,7 +34,7 @@
     z-index: 1;
 }
 
-#portfolio .portfolio_container {
+#portfolio .portfolio-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: repeat(3, 150px); 
@@ -44,18 +44,19 @@
 
 
 
-.portfolio_panel {
-    cursor: pointer !important;
+#portfolio .portfolio-container .row .panel {
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+    cursor: pointer;
     text-transform: uppercase;
+    -webkit-box-shadow: 1px 7px 16px 2px rgba(186,184,186,1);
+    box-shadow: 1px 7px 16px 2px rgba(186,184,186,1);
 }
 
 #portfolio .portfolio-container .row .panel img {
     vertical-align: middle;
-}
-
-.portfolio_image {
-    -o-object-fit: contain;
-    object-fit: fill; 
 }
 
 #portfolio .portfolio-container .panel h2 {
@@ -66,5 +67,6 @@
     border-radius: 5px;
     
 }
+
 
 
