--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -16,7 +16,7 @@
     margin: 0 auto;
 }
 
-#portfolio .title .colored-square-2 {
+.colored-square-2 {
     background: #ffeded;
     width: 150px;
     height: 150px;
@@ -24,7 +24,7 @@
     top: 50;
 }
 
-#portfolio .title h1 {
+.portfolio_h1 {
     position: relative;
     font-size: 2.5em;
     text-transform: uppercase;
@@ -44,7 +44,7 @@
 
 
 
-#portfolio .portfolio-container .row .panel {
+.portfolio-container.panel {
     margin: 10px;
     text-align: center;
     line-height: 75px;
@@ -55,11 +55,11 @@
     box-shadow: 1px 7px 16px 2px rgba(186,184,186,1);
 }
 
-#portfolio .portfolio-container .row .panel img {
+.portfolio_img {
     vertical-align: middle;
 }
 
-#portfolio .portfolio-container .panel h2 {
+.portfolio_h2 {
     font-size: .9em;
     font-weight: 800; 
     letter-spacing: 2px;
