--- a/CSS/top-section.css
+++ b/CSS/top-section.css
@@ -14,7 +14,7 @@
     
 }
 
-#top .info .colored-square {
+.colored-square {
     border: 20px solid #dbf1ff;
     width: 500px;
     height: 500px;
@@ -25,7 +25,7 @@
     
 }
 
-#top .info h1 {
+.top_info_h1 {
     position: relative;
     font-size: 2.5em;
     text-transform: uppercase;
@@ -37,7 +37,7 @@
     z-index: 1;
 }
 
-#top .info p {
+.top_info_p {
     position: relative;
     width: 50%;
     color: #919191;
@@ -45,7 +45,7 @@
     z-index: 1;
 }
 
-#top .info a {
+.top_info_a {
     position: relative;
     color: #16171c;
     text-transform: uppercase;
@@ -57,12 +57,12 @@
     
 }
 
-#top .img {
+.img {
     width: 100%;
     margin: 0 auto;
 }
 
-#top .img .background-img {
+.background-img {
     background-image: url("../Img/my-pic-4.jpg");
     background-position: top center;
     background-repeat: no-repeat;
