--- a/CSS/services-section.css
+++ b/CSS/services-section.css
@@ -88,7 +88,7 @@
     margin-bottom: 50px;
 }
 
-#services-section .services-container .panel:hover {
+.services-container .panel:hover {
     background: rgba(255,255,255,1);
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
