--- a/CSS/hovereffect.css
+++ b/CSS/hovereffect.css
@@ -359,6 +359,7 @@ button:hover span::before, button:hover span::after {
 
 .caption_2:hover span {
     opacity: 0.6;
+    transition: .5s ease;
 }
 
 .caption_2:hover .middle {
